--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
-  margin-top: 60px;
-  
+  margin-top: 56px;
+
   .header-wrapper {
     height: 300px;
     position: relative;
@@ -25,4 +25,10 @@
       text-shadow: 2px 2px 10px rgba(0,0,0,.3);
     }
   }
+}
+
+@include media-breakpoint-up(md) {
+  .header {
+    margin-top: 60px;
+  }  
 }
