--- a/assets/styles/layout/_profile.scss
+++ b/assets/styles/layout/_profile.scss
@@ -1,4 +1,5 @@
 .profile {
+  margin-top: -150px;
   background-color: $white;
   padding: 2rem 1.5rem;
   box-shadow: $box-shadow;
@@ -39,5 +40,7 @@
 }
 
 @include media-breakpoint-up(md) {
-
+  .profile {
+    margin-top: -100px;
+  }
 }
